fixup: spell visible correctly

--- a/components/src/structure/structure.css
+++ b/components/src/structure/structure.css
@@ -79,7 +79,7 @@
 /* Card and card content styles */
 .card {
   position: relative;
-  overflow: visibile;
+  overflow: visible;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.33);
   font-size: var(--fs-body-2);
 }
